--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
     "module": "ES2020",
     "target": "ES2020",
     "esModuleInterop": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "outDir": "dist",
+    "rootDir": "src",
+    "strict": true
   },
   "include": ["src"]
 }
